# template-repo-files

template-jupyterlab-projects/: .mise-java-maven.toml  .mise-node.toml  .mise-python.toml  .pre-commit-config.yaml  README.md  pyproject.toml
template-python-projects/: .mise-python.toml  .mise.toml  .pre-commit-config.yaml  README.md  pyproject.toml
template-terminal/: starship-custom.toml  starship.toml  starship_zsh_integration.zsh
