[project]
name = "jupyter-ai-labs"
version = "0.1.0"
description = "JupyterLab exercises for AI / AgenticAI (reproducible, high-quality)"
readme = "README.md"
requires-python = ">=3.11"
#license = { text = "Proprietary" }
authors = [{ name = "Lloyd D." }]
keywords = ["jupyter", "notebooks", "ai", "agentic-ai", "education"]
dependencies = [
    # Notebook runtime
    "jupyterlab>=4.2",
    "ipykernel>=6.29",

    # Typical data stack for notebooks
    "numpy>=1.26",
    "pandas>=2.2",
    
    # Helpful for API calls / tools in exercises
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    # Quality gates even for notebooks
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    
    # Notebook-focused quality tooling
    "nbqa>=1.8",                 # run ruff/black/etc over notebooks
    "jupyterlab-git>=0.50",      # git integration inside JupyterLab
]

# Optional: export/convert notebooks / nicer docs
docs = [
    "nbconvert>=7.16",
]

# Optional: services used in exercises
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[tool.ruff]
line-length = 100
target-version = "py311"
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers --disable-warnings --maxfail=1"
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["labs"]
strict = true
warn_unused_configs = true
check_untyped_defs = true

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]