[project]
name = "ai-agent-project"
version = "0.1.0"
description = "AI / AgenticAI Python project (container-first, production-ready)"
readme = "README.md"
requires-python = ">=3.11"
#license = { text = "Proprietary" }
authors = [{ name = "Lloyd D." }]
keywords = ["ai", "agentic-ai", "llm", "tools", "automation"]
dependencies = [
    # HTTP + retries (common for model/tool calls)
    "httpx>=0.27",
    "tenacity>=9.0",
    
    # Data validation/config patterns used broadly in AI platforms
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    
    # Logging / CLI ergonomics (useful for agents & tooling)
    "rich>=13.7",
    
    # Optional: CLI entrypoint pattern (agents often expose CLIs)
    "typer>=0.12",
]

[project.optional-dependencies]
# Core development toolchain (globally common)
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-python-dateutil",
]

# Security & quality gates (optional but recommended in many orgs)
security = [
    "pip-audit>=2.7",
    "bandit>=1.7",
]

# API/service mode (agents often run as services)
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

# Common AI helpers (kept optional so you don’t bloat every project)
ai = [
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.scripts]
# Example CLI entrypoint (adjust package/module names to your repo)
ai-agent = "ai_agent.cli:app"

# ---------------------------
# Tooling configuration
# ---------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
respect-gitignore = true

[tool.ruff.lint]
# A globally popular set: pycodestyle, pyflakes, isort, bugbear, pyupgrade
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers --disable-warnings --maxfail=1"
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["ai_agent"]
strict = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

# If you use src/ layout, keep this section (setuptools needs it)
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]